--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "semantic-ui-css": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
